--- a/HBO/Views/Customer/Details.cshtml
+++ b/HBO/Views/Customer/Details.cshtml
@@ -1,4 +1,4 @@
 ﻿@model Customer
 
 <h3>No enough information to show here for this customer yet!</h3>
-<h2>@Model.Name</h2>
+<span>@Model.FirstName</span> - <span>@Model.LastName</span> - <span>@Model.Gender</span>
