--- a/HBO/Views/Customer/Index.cshtml
+++ b/HBO/Views/Customer/Index.cshtml
@@ -14,7 +14,7 @@
             @foreach (var customer in Model)
             {
                 <tr>
-                <td><a asp-controller="Customer" asp-action="Details" asp-route-Id="@customer.Id">@customer.Name</a> </td>
+                <td><a asp-controller="Customer" asp-action="Details" asp-route-Id="@customer.CustomerId">@customer.FirstName</a> </td>
             </tr>
             }
     </tbody>
