--- a/HBO/Views/Customer/UpSert.cshtml
+++ b/HBO/Views/Customer/UpSert.cshtml
@@ -34,7 +34,7 @@ else
                 </div>
                 <div class="form-group">
                     <label for="birthDateId">Birth Date</label>
-                    <input type="date" class="form-control" id="birthDateId" value="2014-02-09" asp-for="@Model.CustomerToAdd.BirthDate >
+                    <input type="datetime-local" class="form-control" id="birthDateId" min="2000-01-02"  asp-for="@Model.CustomerToAdd.BirthDate >
                 </div>
                 <div class="form-group">
                     <label for="genderId">Gender</label>
